testdata/cases/analyze/swapped_errors_is_arguments.expected
error[swapped-errors-is-arguments]: errors.Is arguments appear reversed; inspect the local error first
  ┌─ testdata/cases/analyze/swapped_errors_is_arguments.go:9:19
  │
9 │ 	return errors.Is(io.EOF, err)
  │ 	                 ^^^^^^

found 1 issue: 1 error
