testdata/cases/analyze/swapped_errors_is_arguments.go
package analyze_cases

import (
	"errors"
	"io"
)

func swappedErrorsIsArguments(err error) bool {
	return errors.Is(io.EOF, err)
}
